# firmauy-mcp-inspect

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
src/firmauy_mcp/: __init__.py  server.py
tests/: test_server.py
